; ModuleID = '/home/carl/AnghaBench/linux/security/apparmor/extr_lsm.c_common_perm_cond.c'
source_filename = "/home/carl/AnghaBench/linux/security/apparmor/extr_lsm.c_common_perm_cond.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.path = type { i32 }
%struct.path_cond = type { i32, i32 }
%struct.TYPE_2__ = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, %struct.path*, i32)* @common_perm_cond to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @common_perm_cond(i8* %0, %struct.path* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca %struct.path*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.path_cond, align 4
  store i8* %0, i8** %5, align 8
  store %struct.path* %1, %struct.path** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = getelementptr inbounds %struct.path_cond, %struct.path_cond* %8, i32 0, i32 0
  %10 = load %struct.path*, %struct.path** %6, align 8
  %11 = getelementptr inbounds %struct.path, %struct.path* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call %struct.TYPE_2__* @d_backing_inode(i32 %12)
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  store i32 %15, i32* %9, align 4
  %16 = getelementptr inbounds %struct.path_cond, %struct.path_cond* %8, i32 0, i32 1
  %17 = load %struct.path*, %struct.path** %6, align 8
  %18 = getelementptr inbounds %struct.path, %struct.path* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call %struct.TYPE_2__* @d_backing_inode(i32 %19)
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  store i32 %22, i32* %16, align 4
  %23 = load %struct.path*, %struct.path** %6, align 8
  %24 = getelementptr inbounds %struct.path, %struct.path* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @path_mediated_fs(i32 %25)
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %29, label %28

28:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %34

29:                                               ; preds = %3
  %30 = load i8*, i8** %5, align 8
  %31 = load %struct.path*, %struct.path** %6, align 8
  %32 = load i32, i32* %7, align 4
  %33 = call i32 @common_perm(i8* %30, %struct.path* %31, i32 %32, %struct.path_cond* %8)
  store i32 %33, i32* %4, align 4
  br label %34

34:                                               ; preds = %29, %28
  %35 = load i32, i32* %4, align 4
  ret i32 %35
}

declare dso_local %struct.TYPE_2__* @d_backing_inode(i32) #1

declare dso_local i32 @path_mediated_fs(i32) #1

declare dso_local i32 @common_perm(i8*, %struct.path*, i32, %struct.path_cond*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
